style.css
body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
    margin: 0;
    font-family: Roboto, 'Arial Narrow Bold', sans-serif;
}

.header,
.footer {
    background-color: #1F2937;
}

.nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 0 36px;
    margin: 8px 0;
}

ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

.big-text {
    font-size: 64px;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 0;
    font-family: Pricedown, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: black;
    text-shadow:
        -2px -2px 0 white,
        2px -2px 0 white,
        -2px 2px 0 white,
        2px 2px 0 white;
}

.subtext {
    font-size: 18px;
    color: #E5E7EB;
    max-width: 500px;
}

.header-info {
    display: flex;
    flex-direction: column;
    padding: 16px;
}

.header-misc {
    display: flex;
    justify-content: center;
    gap: 150px;
    align-items: center;
    padding: 25px;
}

.info {
    text-align: center;
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
}

img {
    border: thick solid black;
    border-radius: 25%;
    height: 100px;
    width: 100px;
}

#body-list {
    justify-content: center;
    gap: 50px;
    margin-left: 250px;
    margin-right: 250px;
    padding: 25px;
}

.quote {
    text-align: center;
    background-color: #E5E7EB;
    color: #1F2937;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    max-width: 550px;
    margin-bottom: 0;
}

.sign,
.footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

#Niko {
    height: 281px;
    width: 500px;
    border: solid black;
    border-radius: 10px;
}

button {
    background-color: #FFAB00;
    width: 75px;
    height: 25px;
    border-radius: 5px;
    border: #FFAB00;
    color: #F9FAF8;
}

button:hover {
    background-color: #da9100;
}

button:active {
    background-color: black;
}

#IV-logo {
    border: none;
    width: 50px;
    height: 50px;
}

.image {
    text-align: center;
    flex: 1 1 auto;
}

.sign {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 18px;
    background-image: url("images/background1.jpg");
    background-position: center;
    background-size: cover;
}

.footer, .sign {
    text-align: center;
    color: #E5E7EB;
}

.header-links,
a:link,
a:visited {
    color: #E5E7EB;
}

a {
    text-decoration: none;
}

a:hover {
    color: white;
}

.body {
    background-image: url("images/background.jpg");
    background-position: center;
    background-size: cover;
}

div.image > p {
    color: white;
    text-shadow:
        -1px -1px 0 #000,
        1px -1px 0 #000,
        -1px 1px 0 #000,
        1px 1px 0 #000;
}

